--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "click>=8.1.7",
     "xdg-base-dirs>=6.0.1",
     "click-default-group>=1.2.4",
+    "httpx>=0.27.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
