--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "xdg-base-dirs>=6.0.1",
     "click-default-group>=1.2.4",
     "httpx>=0.27.0",
+    "textual-autocomplete @ file:///Users/darrenburns/Code/postling/../textual-autocomplete",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
