--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "click-default-group>=1.2.4",
     "httpx>=0.27.0",
     "textual-autocomplete @ file:///Users/darrenburns/Code/postling/../textual-autocomplete",
+    "pyperclip>=1.8.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
