--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "postling"
+name = "posting"
 version = "0.1.0a1"
-description = "Add your description here"
+description = "Posting"
 authors = [
     { name = "Darren Burns", email = "darrenb900@gmail.com" }
 ]
@@ -11,7 +11,7 @@ dependencies = [
     "xdg-base-dirs>=6.0.1",
     "click-default-group>=1.2.4",
     "httpx>=0.27.0",
-    "textual-autocomplete @ file:///Users/darrenburns/Code/postling/../textual-autocomplete",
+    "textual-autocomplete>=3.0.0a2",
     "pyperclip>=1.8.2",
 ]
 readme = "README.md"
@@ -22,8 +22,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project.scripts]
-pl = "postling.__main__:cli"
-postling = "postling.__main__:cli"
+pl = "posting.__main__:cli"
+posting = "posting.__main__:cli"
 
 [tool.rye]
 managed = true
@@ -35,4 +35,4 @@ dev-dependencies = [
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/postling"]
+packages = ["src/posting"]
