--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "posting"
-version = "0.1.0a3"
-description = "Posting"
+version = "0.1.0a4"
+description = "A powerful HTTP client that runs in the terminal."
 authors = [
     { name = "Darren Burns", email = "darrenb900@gmail.com" }
 ]
