--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,13 @@ authors = [
     { name = "Darren Burns", email = "darrenb900@gmail.com" }
 ]
 dependencies = [
-    "textual[syntax]>=0.63.6",
     "click>=8.1.7",
     "xdg-base-dirs>=6.0.1",
     "click-default-group>=1.2.4",
     "httpx>=0.27.0",
     "textual-autocomplete>=3.0.0a2",
     "pyperclip>=1.8.2",
+    "textual[syntax] @ file:///Users/darrenburns/code/posting/../textual",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
