--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "httpx>=0.27.0",
     "textual-autocomplete>=3.0.0a2",
     "pyperclip>=1.8.2",
-    "textual[syntax] @ file:///Users/darrenburns/code/posting/../textual",
+    "textual[syntax]>=0.65.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
