--- a/sample-collections/users/delete_user.posting.yaml
+++ b/sample-collections/users/delete_user.posting.yaml
@@ -1,4 +1,5 @@
 name: "Delete User Account"
+posting_version: "1.0"
 description: "Deletes the user account associated with the provided user ID."
 method: "DELETE"
 url: "https://api.example.com/users/{userId}"
