--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "httpx>=0.27.0",
     "textual-autocomplete>=3.0.0a2",
     "pyperclip>=1.8.2",
-    "textual[syntax]>=0.66.0",
+    "textual[syntax]>=0.67.1",
+    "pydantic>=2.7.3",
+    "pyyaml>=6.0.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
