Storing paths in collection nodes, updating sample collections to real placeholder api

--- a/sample-collections/users/delete_user.posting.yaml
+++ b/sample-collections/users/delete_user.posting.yaml
@@ -2,7 +2,7 @@ name: Delete user
 posting_version: "1.0"
 description: "Deletes the user account associated with the provided user ID."
 method: "DELETE"
-url: "https://api.example.com/users/{userId}"
+url: "https://jsonplaceholder.typicode.com/users/{userId}"
 auth:
   type: "Bearer"
   token: "adminToken123"
