--- a/sample-collections/users/delete_user.posting.yaml
+++ b/sample-collections/users/delete_user.posting.yaml
@@ -1,8 +1,5 @@
 name: Delete user
-posting_version: "1.0"
-description: "Deletes the user account associated with the provided user ID."
-method: "DELETE"
-url: "https://jsonplaceholder.typicode.com/users/{userId}"
-auth:
-  type: "Bearer"
-  token: "adminToken123"
+description: Deletes the user account associated with the provided user ID.
+method: DELETE
+url: https://jsonplaceholder.typicode.com/users/{userId}
+body: ''
