--- a/sample-collections/users/profiles/put_profile.posting.yaml
+++ b/sample-collections/users/profiles/put_profile.posting.yaml
@@ -1,19 +1,16 @@
-method: "PUT"
-name: "User Profile"
-posting_version: "1.0"
-description: "Updates the profile information of a specific user based on their user profile ID."
-url: "https://jsonplaceholder.typicode.com/users/{userId}"
-headers:
-  - name: "Content-Type"
-    value: "application/json"
-  - name: "Some-Header"
-    value: "Some value"
-body: |
+name: User Profile
+description: Updates the profile information of a specific user based on their user
+  profile ID.
+method: PUT
+url: https://jsonplaceholder.typicode.com/users/{userId}
+body: |-
   {
     "username": "updateduser",
     "email": "updateduser@example.com",
     "bio": "Updated bio content here."
   }
-auth:
-  type: "Bearer"
-  token: "exampleToken123"
+headers:
+- name: Content-Type
+  value: application/json
+- name: Some-Header
+  value: Some value
