--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,24 @@ dependencies = [
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
+license = { file = "LICENSE" }
+keywords = ["tui", "http", "client", "terminal", "api", "testing", "textual", "cli", "posting", "developer-tool"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+]
+
+[project.urls]
+Homepage = "https://github.com/darrenburns/posting"
+Repository = "https://github.com/darrenburns/posting"
+Issues = "https://github.com/darrenburns/posting/issues"
+Documentation = "https://github.com/darrenburns/posting/blob/main/README.md"
 
 [build-system]
 requires = ["hatchling"]
