--- a/sample-collections/google/this-is-a-request.posting.yaml
+++ b/sample-collections/google/this-is-a-request.posting.yaml
@@ -1,5 +1,5 @@
-name: sausages
-description: 12312asdsdasdasdsasdasdasd123123
+name: this is a request
+url: http://www.google.co.uk
 body: ''
 headers:
 - name: Content-Type
