Creating requests in nested subcollections

--- a/sample-collections/empty/something.posting.yaml
+++ b/sample-collections/empty/something.posting.yaml
@@ -1,2 +1,6 @@
-name: something
-description: '123123123123'
+name: something!!!sads
+description: asjkldhajkshdjaksdasdasdsd
+body: ''
+headers:
+- name: Proxy-Authorization
+  value: '123123'
