--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "posting"
-version = "1.0.0b13"
-description = "A powerful HTTP client that runs in the terminal."
+version = "1.0.0b14"
+description = "The modern API client that lives in your terminal."
 authors = [
     { name = "Darren Burns", email = "darrenb900@gmail.com" }
 ]
