--- a/sample-collections/jsonplaceholder/users/delete.posting.yaml
+++ b/sample-collections/jsonplaceholder/users/delete.posting.yaml
@@ -2,7 +2,6 @@ name: delete a user
 description: Delete a user
 method: DELETE
 url: https://jsonplaceholder.typicode.com/users/1
-body: ''
 headers:
 - name: Content-Type
   value: application/json
@@ -12,3 +11,5 @@ headers:
   value: gzip
 - name: Cache-Control
   value: no-cache
+options:
+  follow_redirects: false
