--- a/sample-collections/jsonplaceholder/users/create.posting.yaml
+++ b/sample-collections/jsonplaceholder/users/create.posting.yaml
@@ -2,7 +2,7 @@ name: create a user
 description: Create a new user
 method: POST
 url: https://jsonplaceholder.typicode.com/users
-body: |
+body: |-
   {
     "name": "John Doe",
     "username": "john.doe",
@@ -17,3 +17,5 @@ headers:
   value: gzip
 - name: Cache-Control
   value: no-cache
+options:
+  follow_redirects: false
