--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,12 @@ dependencies = [
     "click>=8.1.7",
     "xdg-base-dirs>=6.0.1",
     "click-default-group>=1.2.4",
-    "httpx>=0.27.0",
+    "httpx[brotli]>=0.27.0",
     "textual-autocomplete>=3.0.0a3",
     "pyperclip>=1.8.2",
     "pydantic>=2.7.3",
     "pyyaml>=6.0.1",
     "textual[syntax]>=0.70.0",
-    "brotlipy>=0.7.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
