--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic>=2.7.3",
     "pyyaml>=6.0.1",
     "textual[syntax]>=0.70.0",
+    "pydantic-settings>=2.3.4",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
