Permit using host environment variables

--- a/sample-collections/echo-post.posting.yaml
+++ b/sample-collections/echo-post.posting.yaml
@@ -5,5 +5,6 @@ url: https://postman-echo.com/post
 body:
   content: |-
     {
-      "var": "$env:FOO"
+      "var": "$env:FOO",
+      "another": "$env:TERM_PROGRAM",
     }
