--- a/sample-collections/echo-post.posting.yaml
+++ b/sample-collections/echo-post.posting.yaml
@@ -5,7 +5,7 @@ url: https://postman-echo.com/post
 body:
   content: |-
     {
-      "term_program": "$TERM_PROGRAM",
+      "term_program": "$TERM_PROGRAM 🥺",
     }
 headers:
 - name: Content-Type
