Ensure query params are loaded correctly via a snapshot test

--- a/tests/sample-collections/jsonplaceholder/posts/comments/get-comments-query.posting.yaml
+++ b/tests/sample-collections/jsonplaceholder/posts/comments/get-comments-query.posting.yaml
@@ -13,3 +13,11 @@ headers:
 params:
 - name: postId
   value: '1'
+- name: foo
+  value: bar
+- name: beep
+  value: boop
+- name: onetwothree
+  value: '123'
+- name: areallyreallyreallyreallylongkey
+  value: avalue
