Ensuring Auth is saved and loaded correctly

--- a/tests/sample-collections/echo-post.posting.yaml
+++ b/tests/sample-collections/echo-post.posting.yaml
@@ -7,6 +7,11 @@ body:
     {
       "term_program": "$TERM_PROGRAM 🥺",
     }
+auth:
+  type: basic
+  basic:
+    username: darren
+    password: $domain
 headers:
 - name: Content-Type
   value: application/json
