--- a/tests/sample-configs/modified_config.yaml
+++ b/tests/sample-configs/modified_config.yaml
@@ -1,6 +1,8 @@
 theme: galaxy
 layout: horizontal
 use_host_environment: false
+response:
+  show_size_and_time: false
 focus:
   on_startup: collection
   on_response: body
