Sorting collection tree on initial load from directory

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,5 +27,5 @@ jobs:
         with:
           name: snapshot-report-posting
           path: snapshot_report.html
-
+        # TODO - fix file system ordering, see latest snapshot report
     
