--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,20 @@
-name: Test
+name: Continuous Integration
 
-on: [push, pull_request]
+on:
+    pull_request:
+    push:
+      branches:
+        - "main"
+
 env:
     PYTEST_ADDOPTS: "--color=yes"
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - name: Rye Python Setup
@@ -21,11 +29,21 @@ jobs:
             make test
       - name: Attach Code Coverage
         uses: py-cov-action/python-coverage-comment-action@v3.25
+        with:
+            GITHUB_TOKEN: ${{ github.token }}
+
       - name: Save Snapshot Report
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: snapshot-report-posting
           path: snapshot_report.html
-        # TODO - fix file system ordering, see latest snapshot report
     
+      - name: Store Pull Request Comment
+        uses: actions/upload-artifact@v4
+        if: steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
+        with:
+            # If you use a different name, update COMMENT_ARTIFACT_NAME accordingly
+            name: python-coverage-comment-action
+            # If you use a different name, update COMMENT_FILENAME accordingly
+            path: python-coverage-comment-action.txt
