--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dev-dependencies = [
     "syrupy>=4.6.1",
     "pytest-xdist>=3.6.1",
     "pytest-cov>=5.0.0",
+    "pytest-textual-snapshot>=1.0.0",
 ]
 
 [tool.hatch.metadata]
