Config for toggling loading builtin themes

--- a/tests/sample-configs/modified_config.yaml
+++ b/tests/sample-configs/modified_config.yaml
@@ -1,6 +1,7 @@
 theme: galaxy
 layout: horizontal
 use_host_environment: false
+load_user_themes: false
 response:
   show_size_and_time: false
 focus:
