Testing themes which dont specify URL or variable highlighting explicitly - do they fallback to reasonable theme sampled colours?

--- a/tests/sample-themes/another_test.yml
+++ b/tests/sample-themes/another_test.yml
@@ -32,8 +32,8 @@ url:
   separator: 'dim red u'
 
 variable:
-  resolved: '#27ae60'
-  unresolved: '#e74c3c'
+  resolved: 'black on #00ff00'
+  unresolved: 'black on #ff0000'
 
 # Optional metadata
 author: "Your Name"
