--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dev-dependencies = [
     "pytest-xdist>=3.6.1",
     "pytest-cov>=5.0.0",
     "pytest-textual-snapshot>=1.0.0",
+    "mkdocs-material>=9.5.30",
 ]
 
 [tool.hatch.metadata]
