rename pre/post request to on_request/on_response in Scripts

--- a/tests/sample-collections/echo.posting.yaml
+++ b/tests/sample-collections/echo.posting.yaml
@@ -7,6 +7,6 @@ body:
   - name: something
     value: '123'
 scripts:
-  pre_request: scripts/my_script.py
+  on_request: scripts/my_script.py
 options:
   follow_redirects: false
