--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,17 +6,17 @@ authors = [
     { name = "Darren Burns", email = "darrenb900@gmail.com" }
 ]
 dependencies = [
-    "click==8.1.7",
-    "xdg-base-dirs==6.0.1",
-    "click-default-group==1.2.4",
-    "httpx[brotli]==0.27.2",
-    "pyperclip==1.9.0",
-    "pydantic==2.9.0",
-    "pyyaml==6.0.2",
-    "pydantic-settings==2.4.0",
-    "python-dotenv==1.0.1",
-    "textual[syntax]==0.83.0",
-    "textual-autocomplete==3.0.0a12",
+    "click>=8.1.7,<9.0.0",
+    "xdg-base-dirs>=6.0.1,<7.0.0",
+    "click-default-group>=1.2.4,<2.0.0",
+    "httpx[brotli]>=0.27.2,<1.0.0",
+    "pyperclip>=1.9.0,<2.0.0",
+    "pydantic>=2.9.2,<3.0.0",
+    "pyyaml>=6.0.2,<7.0.0",
+    "pydantic-settings>=2.4.0,<3.0.0",
+    "python-dotenv>=1.0.1,<2.0.0",
+    "textual[syntax]==0.83.0",  # pinned intentionally
+    "textual-autocomplete==3.0.0a12",  # pinned intentionally
     "watchfiles>=0.24.0",
 ]
 readme = "README.md"
