--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "posting"
-version = "2.0.0"
+version = "2.0.1"
 description = "The modern API client that lives in your terminal."
 authors = [
     { name = "Darren Burns", email = "darrenb900@gmail.com" }
@@ -15,8 +15,10 @@ dependencies = [
     "pyyaml>=6.0.2,<7.0.0",
     "pydantic-settings>=2.4.0,<3.0.0",
     "python-dotenv>=1.0.1,<2.0.0",
-    "textual[syntax]==0.83.0",  # pinned intentionally
-    "textual-autocomplete==3.0.0a12",  # pinned intentionally
+    "textual[syntax]==0.85.0",
+    # pinned intentionally
+    "textual-autocomplete==3.0.0a12",
+    # pinned intentionally
     "watchfiles>=0.24.0",
 ]
 readme = "README.md"
