--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "textual-autocomplete==3.0.0a12",
     # pinned intentionally
     "watchfiles>=0.24.0",
+    "aiohttp>=3.10.10",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
