--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,9 @@ dev-dependencies = [
     "mkdocs-material>=9.5.30",
 ]
 
+[tool.uv.sources]
+textual = { path = "../textual", editable = true }
+
 [tool.hatch.metadata]
 allow-direct-references = true
 
